# gemini-trail

./: .env.example  .gitignore  README.md  docker-compose.yml  sst.config.ts
.github/workflows/: deploy.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/agent/: graph.py  nodes.py  prompts.py  state.py  templates.py
backend/api/: routes.py  schemas.py
backend/config/: game_config.yaml
backend/engine/: conditions.py  consumption.py  events.py  loader.py  scavenging.py  store.py  travel.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/game/: route.ts
frontend/app/api/game/[...path]/: route.ts
frontend/components/: ActionInput.tsx  DevSaveMenu.tsx  NarrativePanel.tsx  StatsPanel.tsx  TrailMap.tsx
frontend/lib/: types.ts  useGameStream.ts
